# sluice

./: .env.template  .gitignore  DEMO_SCRIPT.md  Dockerfile  HOSTING.md  JUDGE-QUICKSTART.md  LICENSE  README.md  SCORECARD.md  SOCIAL.md  SUBMISSION.md  fly.toml  package-lock.json  package.json  render.yaml  tsconfig.json
agent/src/: index.ts  policy.ts
contracts/sluice_registry/: Cargo.toml  Odra.toml  README.md
contracts/sluice_registry/src/: lib.rs
contracts/sluice_registry/wasm/: SluiceRegistry.wasm
data/: impact.seed.json  onchain-actions.json
docs/: PLAN.md  impact.html  index.html  proof.json  ref_js_examples_README.md  ref_js_examples_client_index.ts  ref_js_examples_facilitator_index.ts  ref_js_examples_server_README.md  ref_js_examples_server_index.ts  ref_js_packages_mechanisms_casper_src_index.ts  ref_js_packages_mechanisms_casper_src_signer.ts  roadmap.html
examples/: rent-a-stream.ts
mcp/: README.md  server.ts
scripts/: build-static.js  casper.ts  deploy-token.ts  economy.sh  fund-agents.ts  keygen.ts  registry.ts  sync-remote.ts  verify-onchain.ts  volume.sh
sdk/: README.md  index.ts
server/public/: demo.html  impact.html  index.html  roadmap.html
server/src/: casper-live.ts  config.ts  demo.ts  feed.ts  index.ts  meter.ts  settlement.ts  store.ts
shared/: types.ts
