[package]
name = "sluice_registry"
version = "0.1.0"
edition = "2021"
description = "On-chain anchor for the Sluice streaming x402 economy (stream terms + settlement checkpoints)."

[dependencies]
odra = { version = "2.8.2", default-features = false }

[dev-dependencies]
odra-test = "2.8.2"

[build-dependencies]
odra-build = "2.8.2"

[[bin]]
name = "sluice_registry_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "sluice_registry_build_schema"
path = "bin/build_schema.rs"
test = false

[features]
default = []

[profile.release]
codegen-units = 1
lto = true
